--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.22.1",
+    "dotenv": "^10.0.0",
     "firebase": "^8.7.1",
     "loadtest": "^5.1.2",
     "prop-types": "^15.7.2",
